# mcp_fitness_stack

./: .gitignore  README.md  claude_desktop_config.json.example
hevy_mcp/: .env.example  pyproject.toml  readme.md  server.py
mymcpserver/: .env.example  pyproject.toml  server.py
stravamcpserver/: .env.example  pyproject.toml  server.py  strava_auth.py
