[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hevy-mcp"
version = "0.1.0"
description = "MCP Server for the Hevy fitness tracking API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
hevy-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/remuzel/hevy-api"
"API Docs" = "https://api.hevyapp.com/docs"
